Fix nav btn overlapping scrollbar

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,7 +1,7 @@
 .landing-page {
 	@extend %flex-center;
 	flex-direction: column;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	margin: 0;
 	padding: 0;
