--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -1,6 +1,5 @@
 .main {
-	height: 100vh;
-	width: 100vw;
-	overflow-y: scroll;
+	height: 100%;
+	width: 100%;
 	scroll-behavior: smooth;
 }
