--- a/styles/main.css
+++ b/styles/main.css
@@ -56,7 +56,7 @@ body {
 
 .landing-page {
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -77,9 +77,8 @@ body {
   }
 }
 .main {
-  height: 100vh;
-  width: 100vw;
-  overflow-y: scroll;
+  height: 100%;
+  width: 100%;
   scroll-behavior: smooth;
 }
 
